--- a/JajanYuk/JajanYuk.WindowsPhone/JajanYuk.WindowsPhone.csproj
+++ b/JajanYuk/JajanYuk.WindowsPhone/JajanYuk.WindowsPhone.csproj
@@ -87,6 +87,9 @@
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ResepMartabakManis.xaml.cs">
+      <DependentUpon>ResepMartabakManis.xaml</DependentUpon>
+    </Compile>
     <Compile Include="ResepPempekDos.xaml.cs">
       <DependentUpon>ResepPempekDos.xaml</DependentUpon>
     </Compile>
@@ -109,6 +112,10 @@
   </ItemGroup>
   <ItemGroup>
     <Page Include="MainPage.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Include="ResepMartabakManis.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
